# 3A_TP_Algo

./: CMakeLists.txt  README.md
TP1/: Queue.h  Queue_Array.cpp  Queue_Array.h  Queue_Array2.cpp  Queue_Array2.h  Queue_Linked_List.cpp  Queue_Linked_List.h  Stack.cpp  Stack.h  Stack_linked_list.cpp  Stack_linked_list.h  Tas_Max.h  exo4.cpp  exo6.cpp  heapMax.cpp  heapMin.cpp  main.cpp  main.h
TP2/: Ex2_Input  README.md  exo1.cpp  exo2.cpp
