cmake_minimum_required(VERSION 4.0)
project(3A_TP_Algo)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)

add_executable(3A_TP_Algo
        #TP1/main.cpp
        #TP1/main.h
        #TP1/Stack_linked_list.h
        #TP1/Stack.h
        #TP1/Queue_Array2.h
        #TP1/Queue_Array.h
        #TP1/exo4.cpp
        #TP1/exo6.cpp
        #TP1/Tas_Max.h
        #TP1/heapMax.cpp
        TP1/heapMin.cpp
)
