cmake_minimum_required(VERSION 4.0)
project(3A_TP_Algo)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)

add_executable(3A_TP_Algo
        TP1/Stack.cpp
        #TP1/Stack_linked_list.cpp
        #TP1/Queue_Array2.cpp
        #TP1/Queue_Array.cpp
        #TP1/exo4.cpp
        #TP1/exo6.cpp
        #TP1/heapMax.cpp
        #TP1/heapMin.cpp
)
